crates/keron-lang/tests/corpus/errors/check/nullable_arithmetic.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `+` requires `Int`, `Double`, or `String` operands, found `Int?` and `Int?`
  --> 5:9
  |
5 | val c = a + b
  |         ^^^^^
